--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,27 +1,26 @@
 {
   "name": "@nitroforms/backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "author": "Rafael Bourscheid da Silveira",
-  "type": "module",
   "scripts": {
-    "start": "nodemon ./src/index.ts",
-    "test:lint": "yarn eslint src/ --ext .ts",
-    "code-style": "yarn prettier --write src/"
+    "start": "nodemon ./src/index.ts"
   },
   "dependencies": {
-    "@nitroforms/eslint-config": "1.0.0",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
+    "lodash": "^4.17.21",
+    "mongodb": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
